src/test/deca/context/invalid/provided/and_type_incompatible4.deca
/*/ Description:
//    Programme effectuant l'opération or de façon incorrecte.
//
// Resultats:
//    3
//
// Historique:
//    cree le 01/01/2022*/

{
        float a = 20.56;
        int b = 5;
        boolean c = a && b;
}
